fininish workspace CR function, routes and association

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,30 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+  <div>
+    <h1><%= link_to "sladock", root_path %></h1>
+  </div>
+  <ul>
+    <% if user_signed_in? %>
+      <p>
+        <%= current_user.email %>
+      </p>
+      <li>
+        <%= link_to "創立新的Workspace", new_workspace_path %>
+      </li>
+      <li>
+        <%= link_to "Sign_out", destroy_user_session_path, method: "delete", class: "nav-link" %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+      </li>
+      <li>
+        <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
+      </li>
+
+    <% end %>
+  </ul>
     <%= yield %>
   </body>
 </html>
