--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+  <h3>以下顯示所有的workspaces:</h3>
   <% @workspaces.each do |workspace| %>
     <p><%= link_to workspace.name, workspace_path(workspace.id) %></p>
   <% end %>
