--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,5 +1,11 @@
 <h1>Workspace名稱：<%= @workspace.name %></h1>
 <%= link_to "create a channel", new_workspace_channels_path(@workspace.id) %>
 <div>
-  <%= link_to "homepage", root_path %>
+  <h2>以下顯示在<%= @workspace.name %>所有的channels</h2>
+  <% @workspace.channels.each do |channel| %>
+    <%= link_to channel.name, workspace_channel_path(workspace_id: @workspace.id, id: channel.id) %>
+  <% end %>
+</div>
+<div>
+  <%= link_to "回首頁", root_path %>
 </div>
