--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,1 +1,1 @@
-<h3>Channel name:<%= @channel.name %></h3>
+<h3 id="<%= @channel.id %>" class="chatroomName">Chatroom name:<%= @channel.name %></h3>
