--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,1 +1,3 @@
-<h3 id="<%= @channel.id %>" class="chatroomName">Chatroom name:<%= @channel.name %></h3>
+<h3 id="<%= @channel.id %>" class="chatroomName">
+  聊天室名字:<%= @channel.name %>
+</h3>
