--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,3 +1,7 @@
 <h3 id="<%= @channel.id %>" class="chatroomName">
   聊天室名字:<%= @channel.name %>
 </h3>
+
+<% @channel.messages.each do |message| %>
+  
+<% end %>
