--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -3,5 +3,11 @@
 </h3>
 
 <% @channel.messages.each do |message| %>
-  
+  <%= message.content %>
+  <%= message.user %>
+<% end %>
+
+<%= form_with(model: @message, url: new_channel_message_path(@channel)) do |form| %>
+  <%= form.text_field :content, placeholder: "輸入訊息" %>
+  <%= form.submit "送出" %>
 <% end %>
