--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,12 +1,12 @@
 
 <div>
-  <div class="header bg-deep_sladock h-10 border border-2">
+  <div class="header bg-deep_sladock h-10 border border-1">
     <div class="pt-1 grid grid-cols-4">
-      <div class="w-full search-area flex col-start-2 col-end-4 ">
+      <div class="w-full search-area flex items-center col-start-2 col-end-4 ">
         <svg class="h-8 w-8 pr-2" fill="none" viewBox="0 0 24 24" stroke="white">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
-        <input class="w-3/4 rounded bg-light_sladock " type="text" placeholder="Search">
+        <input class="w-3/4 h-6 rounded bg-light_sladock " type="text" placeholder="Search">
         <svg class="h-8 w-8 pl-2" viewBox="0 0 20 20" fill="white">
           <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
         </svg>
@@ -33,10 +33,10 @@
           </p>
         <% end %>
     </div>
-    <div class=" col-span-10 border border-2">
+    <div class=" col-span-10 border border-1">
     </div>  
   </div>
-  <div class="chatroom grid grid-cols-12 h-10 border border-2 ">
+  <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
     <div class="bg-light_sladock text-white col-span-2">
     </div>
     <div class=" col-span-10">
