更改顯示為暱稱而不是信箱 & 暱稱欄位為必填

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div><%= f.label :nickname %><br />
+    <%= f.text_field :nickname %>
+  </div>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
