--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -1,15 +1,33 @@
-<%= form_with(model: @channel, url:workspace_channels_path(id: @channel.workspace_id)) do |f| %>
-  <div class="field">
-    <%= f.label :name, "channel name" %>
-    <%= f.text_field :name %>
+<div>
+  <%= render "./shared/header" %>
+  <div class="chatroom grid grid-cols-12">
+    <div class="bg-light_sladock text-white col-span-2">
+      <%= form_with(model: @channel, url:workspace_channels_path(id: @channel.workspace_id)) do |f| %>
+      <div class="field">
+        <%= f.label :name, "channel name" %>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :topic %>
+        <%= f.text_field :topic %>
+      </div>
+      <div class="field">
+        <%= f.label :description %>
+        <%= f.text_field :description %>
+      </div>
+        <%= f.submit "submit" %>
+      <% end %>
+    </div>
+    <div class=" col-span-10 border border-1">
+    </div>  
   </div>
-  <div class="field">
-    <%= f.label :topic %>
-    <%= f.text_field :topic %>
+  <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
+    <div class="bg-light_sladock text-white col-span-2">
+    </div>
+    <div class=" col-span-10">
+    </div>  
   </div>
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-  <%= f.submit "submit" %>
-<% end %>
+
+
+  
+</div>
