新增側邊欄-channel連結與user連結

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -5,6 +5,7 @@
       <h3 id="channel-id" data-channel-id="<%= @channel.id %>" >
         聊天室名字:<%= @channel.name %>
       </h3>
+      <%= render "./shared/leftbar" %>
     </div>
     <div class=" col-span-10 border border-1">
     </div>  
