update channel show

--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -2,7 +2,7 @@
   <%= message.content %>
 </div>
 <div class="author">
-  <%= message.user.email %>
+  <%= message.user.nickname %>
 </div>
 <div class="createtime">
   <%= message.created_at %>
