訊息匡置底

--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -1,8 +1,8 @@
+<div class="author font-bold">
+  <%= message.user.nickname %>
+</div>
 <div class="content">
   <%= message.content %>
-</div>
-<div class="author">
-  <%= message.user.nickname %>
 </div>
 <div class="createtime">
   <%= message.created_at %>
