--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,24 +7,13 @@
       </h3>
       <%= render "./shared/leftbar" %>
     </div>
-    <div class=" col-span-10 border border-1">
-      <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
-      <div class="bg-light_sladock text-white col-span-2">
-      </div>
-      <div class=" col-span-10">
-        <div class="messages">
-          <% @channel.messages.each do |message| %>
-            <%= render 'messages/message_broadcast', message: message %>
-          <% end %>
-        </div>
-        <%= form_with(model: @message, url: channel_messages_path(@channel), id: "new_message") do |form| %>
-          <%= form.text_field :content, placeholder: "輸入訊息" %>
-          <%= form.submit "送出", id: "send_message_btn" %>
-        <% end %>
-      </div>  
+    <div class="col-span-10 border border-1 bg-gray-700">
+    <div class="flex-col itemsp-end">
+      <% @channel.messages.each do |msg| %>
+        <%= render "messages/message_broadcast" , message: msg%>
+      <% end %>
     </div>
       <%= render "./shared/msgform" %>
     </div>  
-  </div>  
   </div>  
 </div>
