--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= render "./shared/header" %>
   <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock text-white col-span-2">
+    <div class="bg-light_sladock col-span-2">
       <%= form_with(model: @channel, url:workspace_channels_path(id: @channel.workspace_id)) do |f| %>
       <div class="field">
         <%= f.label :name, "channel name" %>
