--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -1,9 +1,11 @@
-<div class="author font-bold">
-  <%= message.user.nickname %>
-</div>
-<div class="content">
-  <%= message.content %>
-</div>
-<div class="createtime">
-  <%= message.created_at %>
+<div>
+  <div class="author font-bold">
+    <%= message.user.nickname %>
+  </div>
+  <div class="createtime">
+    <%= message.created_at %>
+  </div>
+  <div class="content">
+    <%= message.content %>
+  </div>
 </div>
