--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -2,7 +2,7 @@
 <div>
   <%= render "./shared/header" %>
   <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock text-white col-span-2">
+    <div class="bg-light_sladock col-span-2">
       <%= form_with(model: @workspace, url: workspaces_path) do |f| %>
   <div>
     <%= f.label :name, "Workspace Name" %>
