完成即時搜尋

--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -76,15 +76,16 @@
     <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
     </div>
     <span class="text-xs text-gray-600">#student</span>
-    <input type="search" placeholder="Search by name or email"class="font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none  focus:shadow-outline">
+    <input type="text" placeholder="Search by name or email"class="search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none  focus:shadow-outline">
+    <div class="member-group absolute top:0 bg-white rounded">
+    </div>
     <div class="text-right">
       <button class="font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none">Done</button>
     </div>
   </div>
 </div>
     <input type="text" placeholder="Search by name or email"class="search font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none  focus:shadow-outline">
-<div class="sgggg">
-
+<div class="member-group">
 </div>
 
 
