--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -76,16 +76,14 @@
     <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
     </div>
     <span class="text-xs text-gray-600">#student</span>
-    <input type="text" placeholder="Search by name or email"class="search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none  focus:shadow-outline">
-    <div class="member-group absolute top:0 bg-white rounded">
+    <input type="text" placeholder="Search by name or email"class="search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" multiple>
+    <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
+    
     </div>
     <div class="text-right">
       <button class="font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none">Done</button>
     </div>
   </div>
-</div>
-    <input type="text" placeholder="Search by name or email"class="search font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none  focus:shadow-outline">
-<div class="member-group">
 </div>
 
 
