turn off the turbolinks and installing stimulusJs and used on join channel

--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -9,13 +9,11 @@
 <div class="w-full">Saved items</div>
 <div class="w-full">More</div>
 <div class="w-full">Shared</div>
-<div class="w-full">
+<div class="w-full" data-controller="channels">
   <p class="font-medium">Channels</p>
     <% @channels.each do |channel| %>
-      <li>
-        <%= link_to channel.name, workspace_channel_path(workspace_id: @workspace.id, id: channel.id), data:{controller: "unreads",unreads_id: channel.id} %>
-        <%= channel.users.include?(current_user) ? (link_to "-", channel_users_channels_path(channel.id), method: "delete", remote: true, leave_channel: channel.id):(link_to "+", channel_users_channels_path(channel.id), method: "post", remote: true, add_channel: channel.id) %>
-      </li>
+      <li data-target="channels.joined" data-channels-id="<%= channel.id%>">
+        <%= link_to channel.name, workspace_channel_path(workspace_id: @workspace.id, id: channel.id) %><%= channel.users.include?(current_user) ? (link_to "-", channel_users_channels_path(channel.id), method: "delete", remote: true, data:{action: "click->channels#addChannel"}):(link_to "+", channel_users_channels_path(channel.id), method: "post", remote: true, data:{action: "click->channels#removeChannel"}) %></li>
     <% end %>
 </div>
 <div class="w-full">
