--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,11 +1,11 @@
 <div>
   <%= render "./shared/header" %>
   <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock text-white col-span-2">
+    <div class="bg-light_sladock text-white col-span-2 px-2">
       <%= render "./shared/leftbar" %>
     </div>
     <div class="h-full col-span-10 border border-1 bg-gray-700">
-    <div class="flex-col justify-end pb-12 px-5">
+    <div class="flex-col justify-end pb-12 px-5 messages">
       <% @channel.messages.each do |msg| %>
         <%= render "messages/message_broadcast" , message: msg %>
       <% end %>
