--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -18,9 +18,9 @@
       <li data-controller="channels" data-channels-id="<%= channel.id %>">
         <%= link_to channel.name, workspace_channel_path(@workspace, channel) %>
         <% if channel.users.include?(current_user) %>
-          <%= link_to "-", channel_users_channels_path(channel.id), method: "post", remote: true, data:{action: "click->channels#removeChannel", target: "channels.symbol"} %>
+          <button data-action="click->channels#removeChannel" data-target="channels.symbol">-</button>
         <% else %>
-          <%= link_to "+", channel_users_channels_path(channel.id), method: "delete", remote: true, data:{action: "click->channels#addChannel", target: "channels.symbol"} %>
+          <button data-action="click->channels#addChannel" data-target="channels.symbol">+</button>
         <% end %>
       </li>
     <% end %>
