--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,7 +29,7 @@
             </div>
             <div class="border-t border-gray-100"></div>
             <div class="py-1">
-              <a href="#" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem">sign out</a>
+              <%= link_to 'sign out',destroy_user_session_path,method:'DELETE',class: 'block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem' %>
             </div>
           </div>
         </div>
