--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -27,4 +27,7 @@
 </div>
 <div class="w-full">
   <p class="font-medium">Direct messages</p>
+  <% (@workspace.users - [current_user]).each do |user| %>
+    <%= link_to user.nickname, workspace_directmsg_path(@workspace, user.id) %>
+  <% end %>
 </div>
