--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,20 +1,23 @@
 <div>
   <%= render "./shared/header" %>
   <div class="chatroom grid grid-cols-12">
-    <div class="bg-light_sladock text-white col-span-2 px-2">
+    <div class="bg-light_sladock text-white col-span-2 px-2" data-controller="unread-msgs">
       <%= render "./shared/leftbar" %>
     </div>
-    <div class="h-full col-span-10 border border-1 bg-gray-700">
-      <div class="flex-col justify-end pb-12 px-5 messages">
-        <% (@channel || @directmsg).messages.each do |msg| %>
+
+    <div class="h-full col-span-10 border border-1 bg-gray-700" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" >
+      <div class="pb-12 px-5 messages" data-target="subscribe.messages">
+        <% (@channel || @directmsg).messages.order(:created_at).each do |msg| %>
           <%= render "messages/message_broadcast" , message: msg %>
         <% end %>
       </div>
-      <% if @channel %>
-        <%= render "./shared/msgform" %>
-      <% else %>
-        <%= render "./shared/msgform_direct" %>
-      <% end %>
+      <div>
+        <% if @channel %>
+          <%= render "./shared/msgform" %>
+        <% else %>
+          <%= render "./shared/msgform_direct" %>
+        <% end %>
+      </div>
     </div>  
   </div>  
 </div>
