將文字更改為i18n，並擁有中英文兩版

--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -5,16 +5,16 @@
     <div class="bg-light_sladock col-span-2">
       <%= form_with(model: @workspace, url: workspaces_path) do |f| %>
   <div>
-    <%= f.label :name, "Workspace Name" %>
-    <%= f.text_field :name, placeholder: "Enter workspace name"%>
+    <%= f.label :name,t("workspace.new.name"), class:"text-white font-bold"%>
+    <%= f.text_field :name, placeholder: t("workspace.new.placeholder")%>
   </div>
-    <%= f.submit "Submit" %>
+    <%= f.submit t("form.submit") %>
   <% end %>
   </div>
-    <div class=" col-span-10 border border-1">
+    <div class="col-span-10 border border-1">
     </div>  
   </div>
-  <div class="chatroom grid grid-cols-12 h-10 border border-1 ">
+  <div class="chatroom grid grid-cols-12 h-10 border border-1">
     <div class="bg-light_sladock text-white col-span-2">
     </div>
     <div class=" col-span-10">
