--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,7 @@
   <body>
     <%= notice %>
     <%= yield %>
+    <%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-TW" %>
+    <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
   </body>
 </html>
