Notification not finish yet

--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -16,7 +16,7 @@
   </p>
     <% @channels.each do |channel| %>
       <div data-controller="channels" data-channels-id="<%= channel.id %>">
-        <span>#</span>
+        <span id="<%= channel.id %>" >#</span>
         <%= link_to channel.name, workspace_channel_path(@workspace, channel) %>
         <% if channel.users.include?(current_user) %>
           <button data-action="click->channels#removeChannel" data-target="channels.symbol">-</button>
