--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -15,42 +15,55 @@
         <% else %>
           <%= render "./shared/msgform_direct" %>
         <% end %>
-    </div> 
-      <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
-        <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
-          <div class="flex flex-wrap mb-6">
-            <div class="w-full flex share-title justify-between">
-              <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
-              <div class="cancel-img mt-4 mr-2">
-                <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel") %>
-              </div>
-            </div>
-            <div class="w-full px-3 mt-4">
-              <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-              <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }), class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
-            </div>
+    </div>   
+  </div>       
+  <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
+    <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
+      <div class="flex flex-wrap mb-6">
+        <div class="w-full flex share-title justify-between">
+          <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
+          <div class="cancel-img mt-4 mr-2">
+            <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel") %>
           </div>
-          <div class="flex flex-wrap mb-6">
-            <div class="w-full px-3">
-                <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-                <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
-            </div>
-          </div>
-          <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
-          <div class="flex flex-wrap mb-6 px-3 mt-4">
-            <div class="w-full px-3 border-l-4 select-message">
-            </div>
-          </div>
-          <div class="flex flex-row-reverse mb-4 mr-2">
-            <%= f.submit "share", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
-          </div>
-        <% end %> 
+        </div>
+        <div class="w-full px-3 mt-4">
+          <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+          <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }), class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
+        </div>
       </div>
-      
-    
-  </div>  
-  
+      <div class="flex flex-wrap mb-6">
+        <div class="w-full px-3">
+            <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+            <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+        </div>
+      </div>
+      <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
+      <div class="flex flex-wrap mb-6 px-3 mt-4">
+        <div class="w-full px-3 border-l-4 select-message">
+        </div>
+      </div>
+      <div class="flex flex-row-reverse mb-4 mr-2">
+        <%= f.submit "share", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+      </div>
+    <% end %> 
+  </div>
+  <div class="add-people absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
+    <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
+      <div class="flex justify-between">
+        <h5 class="font-bold"><%= t("invite.add_people") %></h5>
+      <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
+      </div>
+      <span class="text-xs text-gray-600">#student</span>
+      <%= form_with(url: invite_channel_users_channels_path(@channel.id),method: "POST",local: true) do |f| %>
+        <%= f.text_field :name,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
+        <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
+        </div>
+      <div class="text-right">
+        <%= f.submit t("invite.done"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
+      <% end %>
+      </div>
+    </div>
+  </div>
 </div>
-
 
 
