--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -47,7 +47,7 @@
       </div>
     <% end %> 
   </div>
-  <div class="add-people absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
+  <div class="ch-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
     <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
       <div class="flex justify-between">
         <h5 class="font-bold"><%= t("invite.add_people") %></h5>
@@ -65,5 +65,4 @@
     </div>
   </div>
 </div>
-
 
